BradkenProduction/force-app/main/default/objects/Quote_Facility__c/Quote_Facility__c.object-meta.xml
<CustomObject>
    <description>Facilities selected on a Quote</description>
    <label>Quote Supplier</label>
    <nameField>
        <displayFormat>QF-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>