BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Accepted_Estimated_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Estimated_Date__c</fullName>
    <label>Accepted Estimated Date</label>
    <type>Date</type>
</CustomField>