BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Bradken_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Bradken_Part_Number__c</fullName>
    <description>Bradken Part Number from the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Bradken_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bradken Part Number</label>
    <type>Text</type>
</CustomField>