BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Converted_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Converted_Product_Cost__c</fullName>
    <formula>TEXT( Quote__r.CurrencyIsoCode ) + &quot; &quot; + TEXT(  ROUND(Product_Cost_converted__c,2)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product cost converted to Quote currency</inlineHelpText>
    <label>Converted Product Cost</label>
    <type>Text</type>
</CustomField>