BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Created_via_Supplier_Selection__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Supplier_Selection__c</fullName>
    <label>Created via Supplier Selection?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>