BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <description>Customer Part Number from the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Customer_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Part Number</label>
    <type>Text</type>
</CustomField>