BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Dated_Exchange_Rate_to_AUD__c.field-meta.xml
<CustomField>
    <fullName>Dated_Exchange_Rate_to_AUD__c</fullName>
    <description>Dated exchange rate required to convert the Quote Facility Currency back to AUD (corporate)</description>
    <label>Dated Exchange Rate to AUD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>