BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Dated_Exchanged_Rate_to_Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>Dated_Exchanged_Rate_to_Quote_Currency__c</fullName>
    <description>Dated exchange rate required to convert the Product Cost AUD converted to Quote Currency. Populated via flow when Product cost is populated from ECL form submission</description>
    <label>Dated Exchanged Rate to Quote Currency</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>