BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number__c</fullName>
    <description>Drawing number of the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Drawing_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawing Number</label>
    <type>Text</type>
</CustomField>