BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Drawing_Number_Revision__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number_Revision__c</fullName>
    <description>Drawing Number Revision from the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Drawing_Number_Revision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawing Number Revision</label>
    <type>Text</type>
</CustomField>