BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/ECL_Nintex_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>ECL_Nintex_Form_Status__c</fullName>
    <description>ECL Nintex Form status updated via Nintex Workflow Cloud based on the outcome of the form completed by external supplier</description>
    <inlineHelpText>ECL Nintex Form status based on the outcome of the form completed by external supplier</inlineHelpText>
    <label>ECL Nintex Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Estimation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>