BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/ECL_Supplier_Grouping__c.field-meta.xml
<CustomField>
    <fullName>ECL_Supplier_Grouping__c</fullName>
    <description>Title given to selected suppliers that will be used in the ECL process to determine which products to send</description>
    <inlineHelpText>Title given to selected suppliers that will be used in the ECL process to determine which products to send</inlineHelpText>
    <label>ECL Supplier Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>