BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Estimating_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Completed_Date__c</fullName>
    <description>Date the estimating process was Completed by the Facility. Updated by Nintex</description>
    <label>Estimating Completed Date</label>
    <type>Date</type>
</CustomField>