BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Estimating_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Initiated_Date__c</fullName>
    <description>Date the estimating process was initiated from the Quote. Updated by Nintex</description>
    <label>Estimating Initiated Date</label>
    <type>Date</type>
</CustomField>