BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Estimators_Comments__c.field-meta.xml
<CustomField>
    <fullName>Estimators_Comments__c</fullName>
    <description>Comments left by the Facility on completion of the form. Updated by Nintex</description>
    <label>Estimators&apos; Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>