BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <description>Populated by Nintex Workflow ECL Form</description>
    <inlineHelpText>Lead time to supply the product from the corresponding facility</inlineHelpText>
    <label>Lead Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>