BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <description>Line Item number from the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Line_Item_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>