BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade__c</fullName>
    <description>Material Grade derived from the associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Material_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Grade</label>
    <type>Text</type>
</CustomField>