BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>Populated by Nintex Workflow ECL Form</description>
    <inlineHelpText>Facility cost price</inlineHelpText>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>