BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Product_Cost_converted__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_converted__c</fullName>
    <formula>( Product_Cost__c /  Dated_Exchange_Rate_to_AUD__c ) *  Dated_Exchanged_Rate_to_Quote_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converted according to Parent Quote/Opportunity Currency</inlineHelpText>
    <label>Product Cost (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>