BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Quote_Approval_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Date_Field__c</fullName>
    <description>Date field to capture Quote Approval process details</description>
    <label>Quote Approval Date Field</label>
    <type>Date</type>
</CustomField>