BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Quote_Approval_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Name_Field__c</fullName>
    <description>Name field to capture Quote Approval process.</description>
    <label>Quote Approval Name Field</label>
    <type>TextArea</type>
</CustomField>