BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Quote_Line_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Product__c</fullName>
    <formula>Quote_Line_Item__r.Bradken_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bradken Part Number of the related Quote Line Product</inlineHelpText>
    <label>Quote Line Product</label>
    <type>Text</type>
</CustomField>