BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Supplier_Selection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Selection_Comments__c</fullName>
    <description>Updated as part of Supplier Selection from a Case</description>
    <label>Supplier Selection Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>