BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Synced_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Synced_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Chosen supplier for the Quote Line Item populating Lead Time and Cost</inlineHelpText>
    <label>Synced Supplier</label>
    <type>Checkbox</type>
</CustomField>