BradkenProduction/force-app/main/default/objects/Quote_Facility__c/fields/Unibis_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Unibis_Supplier_Code__c</fullName>
    <formula>Facility__r.Unibis_Facility_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unibis Supplier Code</label>
    <type>Text</type>
</CustomField>